tests/TypingSpec/valid/prog/abs-reorder-1.algst
const_int : ∀(a:TU). Int -> a -> Int
const_int = \i [_:TU] _ -> i
