tests/TypingSpec/invalid/types/type-app-invalid.algst
\(f : Int -> Int) -> f [Int] 10
